--- a/pegasus/sites.v3/hourofcode.com/public/css/front-page.css
+++ b/pegasus/sites.v3/hourofcode.com/public/css/front-page.css
@@ -132,7 +132,7 @@ a.category-link {
   .front-header-description {
     font-size: 20px;
     line-height: 24px;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
   }
 }
 
@@ -151,7 +151,7 @@ a.category-link {
 
   .front-header-description {
     font-size: 24px;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
   }
 }
 
